# Nexus-Orchestrator

./: .cursorrules  .env.example  .gitignore  12495623230.py  AKBARGAY.py  ARCHITECTURE.md  DOCS.md  Dockerfile.worker  INSTALL_NEXUS.ps1  Launch_Dashboard.bat  Launch_Nexus.py  Launch_NexusSupreme.py  Launch_TeleFix.py  NEXUS_MASTER_V1.spec  NexusSupreme.spec  README.md  README_LINUX.md  START_NEXUS.ps1  STATUS_NEXUS.ps1  STOP_NEXUS.ps1  Start_Sentinel_Hidden.vbs  TeleFix_Worker.spec  _rss_sample.xml  _tmp_master_redis_open.py  _tmp_redis_lan_fix.py  audit_checkpoint_20260323_060000.json  audit_checkpoint_20260323_072625.json  audit_checkpoint_20260323_073654.json  audit_checkpoint_20260325_125854.json  audit_checkpoint_20260325_130959.json  audit_checkpoint_20260325_140301.json  audit_checkpoint_20260325_151312.json  audit_checkpoint_20260325_152040.json  audit_checkpoint_20260326_155022.json  bot.py  check_network.py  config.py  db.py  deep_harvest.py  deploy_cluster.py  (+23 more)
.claude/: launch.json
automations/: marketing_generator.py  requirements.txt
automations/deal_hunter/: evaluator.py  main.py  notifier.py  requirements.txt  scraper.py
classified_20260325_141234/: summary.txt
classified_20260325_153135/: summary.txt
classified_20260326_160056/: summary.txt
config/: night_watch_manifest.example.json  node_config.linux-laptop.json  node_config.master.json  node_config.windows-laptop.json  settings.json  system_settings.json
configs/: .env.example  group_message_purge.example.json  owner_groups_lockback.example.json  owner_groups_lockdown.example.json  owner_groups_lockdown.json  settings.example.yaml  worker-linux-laptop.env  worker-mac-mini.env  worker-windows-gaming.env  workers.example.json  workers.json  workers.json.example
core/: __init__.py  behavioral_analyzer.py  scanner.py
data/: group_message_purge_last.json  nexus_architect.sqlite3  nexus_checkpoints.db  nexus_dashboard.sqlite3  owner_groups_lockdown_last.json
docs/: repair_agreement.md  service_workflow.md
docs/architecture/: 01_core_and_opsec.md  05_openclaw_moltbot_integration.md
fix-express-labs/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
fix-express-labs/src/: App.jsx  index.css
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: config.js
frontend/styles/: theme.ts
nexus/: __init__.py  debug_ndjson.py  ndjson_debug_log.py  requirements.txt
nexus/agents/: __init__.py
nexus/api/: __init__.py  auth.py  dependencies.py  hitl_store.py  main.py  polymarket_manual_errors.py  root_schemas.py  schemas.py
nexus/brain/: __init__.py  personas.py
nexus/data/: targets.json
nexus/master/: __init__.py  dispatcher.py  flight_mode.py  hitl_gate.py  main.py  resource_guard.py  sentinel.py  (+1 more)
nexus_supreme/: __init__.py
redis-local/: dump.rdb  redis.windows-lan.conf  start-redis-lan.ps1
scripts/: __init__.py  _check_heartbeats.py  _check_worker_progress.py  _check_worker_status.py  _debug_worker.py  _debug_worker2.py  _deploy_and_restart.py  _fix_worker_ccxt.py  _restart_worker_fixed.py  build_all.ps1  build_exe.py  check_wallet_sync.py  deploy_all.bat  deploy_all.ps1  fix_network.ps1  fix_wsl.py  git_manager.py  git_sync.py  hot_reload_watcher.py  migrate_ahu_to_nexus.py  nexus-push  nexus_control.py  nexus_core.py  nexus_diagnostics.py  nexus_launcher.py  nexus_lite.py  nexus_push.py  night_watch_execution_init.py  node_monitor.py  package_worker.py  purge_own_telegram_messages.py  register_sentinel_task.ps1  run_whole_pc_scanner.bat  run_whole_pc_scanner.ps1  sentinel_seo_check.py  setup-wsl-redis-proxy.ps1  setup_dev_windows.ps1  start_api.py  start_deployer.py  start_master.py  (+11 more)
tests/: test_media_opsec.py  test_seo_fleet_stats.py
utils/: __init__.py  paths.py
vault/: group_infiltration.json
(+19950 files in other folders)
