[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-orchestrator"
version = "0.1.0"
description = "Distributed Agentic Workflow System — Master + Worker nodes over Redis/ARQ"
requires-python = ">=3.10"
dependencies = [
    # --- Async job queue (Redis-backed, asyncio-native) ---
    "arq>=0.26",

    # --- Redis async client (ARQ dependency, also used directly) ---
    "redis[hiredis]>=5.0",

    # --- Typed data contracts shared between master and workers ---
    "pydantic>=2.7",
    "pydantic-settings>=2.3",   # .env / environment variable loading

    # --- Resource monitoring & process management ---
    "psutil>=6.0",
    "rich>=13.7",

    # --- Structured async logging ---
    "structlog>=24.1",

    # --- HTTP client for agents that call external APIs ---
    "httpx>=0.27",

    # --- Fast JSON (Gemini payloads / parsing) ---
    "ujson>=5.9",

    # --- CLI entrypoints ---
    "typer>=0.12",

    # --- Async utilities ---
    "anyio>=4.4",
    "uvloop>=0.20; platform_system != 'Windows'",

    # --- API server ---
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    # --- Telegram bot ---
    "aiogram>=3.20",

    # --- Telefix bridge (async SQLite) ---
    "aiosqlite>=0.20",

    # --- Secrets encryption (Vault at-rest) ---
    "cryptography>=42.0",

    # --- API rate limiting ---
    "slowapi>=0.1.9",

    # --- Auto-Deployer: SSH/SCP to worker nodes (Phase 15) ---
    "paramiko>=3.4",

    # --- .env file loading (used by config.py and start scripts) ---
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
poly-trading = [
    "web3>=6.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
nexus-master = "scripts.start_master:main"
nexus-worker = "scripts.start_worker:main"
nexus-api = "scripts.start_api:main"
nexus-telegram = "scripts.start_telegram_bot:main"
nexus-push = "scripts.nexus_push:main"

[tool.hatch.build.targets.wheel]
packages = ["nexus", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
